Fixed spacing

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -101,7 +101,7 @@ div.row.team{
 	width: 50%;
 	margin-left: auto;
 	margin-right: auto;
-	min-width: 300px;
+	min-width: 500px;
 }
 
 .team-member{
